# gamacros

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  dist-workspace.toml  justfile  profile.yaml  rustfmt.toml
.cargo/: config.toml
.cursor/rules/: just.mdc
.github/: build-setup.yaml
.github/workflows/: benchmark.yaml  qa.yaml  release.yml
crates/gamacros-activity/: Cargo.toml  README.md
crates/gamacros-activity/examples/: listener.rs
crates/gamacros-activity/src/: lib.rs  monitor.rs
crates/gamacros-activity/src/nsworkspace/: app_delegate.rs  app_state.rs  listener.rs  mod.rs  util.rs
crates/gamacros-bit/: README.md
crates/gamacros-bit/derive/: Cargo.toml  README.md
crates/gamacros-bit/derive/examples/: derive_bitmask.rs
crates/gamacros-bit/derive/src/: derive.rs  lib.rs
crates/gamacros-bit/mask/: Cargo.toml
crates/gamacros-bit/mask/examples/: README.md  atomic_usage.rs  basic_usage.rs  macro_pad.rs  with_derive.rs
crates/gamacros-bit/mask/src/: atomic.rs  bitmask.rs  lib.rs
crates/gamacros-control/: Cargo.toml
crates/gamacros-control/examples/: mouse_move.rs  perform_key_combo.rs  press_release.rs  scroll.rs
crates/gamacros-control/src/: key.rs  key_combo.rs  lib.rs  modifiers.rs  performer.rs
crates/gamacros-controller/: Cargo.toml
crates/gamacros-controller/src/: command.rs  error.rs  events.rs  handle.rs  lib.rs  manager.rs  runtime.rs  types.rs
crates/gamacros-gamepad/: Cargo.toml
crates/gamacros-gamepad/src/: events.rs  handle.rs  manager.rs  runtime.rs
crates/gamacros-keypress/: Cargo.toml
crates/gamacros-keypress/src/: key_combo.rs  performer.rs
crates/gamacros-profile/: Cargo.toml
crates/gamacros-profile/src/: lib.rs  profile.rs  profile_common.rs  profile_v1.rs  resolve.rs  selector.rs
crates/gamacros-workspace/: Cargo.toml
crates/gamacros-workspace/benches/: parse.rs
crates/gamacros-workspace/resources/: gc_profile.yaml
crates/gamacros-workspace/src/: lib.rs  parse.rs  profile.rs  profile_parse.rs  profile_watcher.rs  resolve.rs  watcher.rs  workspace.rs
crates/gamacros-workspace/src/v1/: combo.rs  mod.rs  parse.rs  profile.rs  schema.json  selector.rs  strings.rs
crates/gamacrosd/: Cargo.toml
crates/gamacrosd/benches/: buttons.rs  sticks.rs
crates/gamacrosd/src/: activity.rs  axis_bus.rs  cli.rs  control.rs  gamacros.rs  lib.rs  logging.rs  main.rs  runner.rs  runtime.rs  stick.rs
crates/gamacrosd/src/api/: mod.rs  unix_sock.rs
crates/gamacrosd/src/app/: gamacros.rs  mod.rs  stick.rs
crates/gamacrosd/src/app/stick/: compiled.rs  mod.rs  repeat.rs  tick.rs  util.rs
crates/gamacrosd/src/core/: gamacros.rs  mod.rs  stick.rs
scripts/: install.sh  update_version.py
