[workspace]
members = [
  "crates/gamacros-control",
  "crates/gamacros-gamepad",
  "crates/gamacros-profile",
  "crates/gamacros-bit/derive",
  "crates/gamacros-bit/mask",
  "crates/gamacrosd",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.80"
homepage = "https://github.com/mishamyrt/gamacros"
documentation = "https://github.com/mishamyrt/gamacro"
repository = "https://github.com/mishamyrt/gamacros"
authors = ["Mikhael Khrustik <misha@myrt.co>"]
license = "MIT"

[workspace.dependencies]
gamacrosd = { path = "crates/gamacrosd" }
gamacros-control = { path = "crates/gamacros-control" }
gamacros-gamepad = { path = "crates/gamacros-gamepad" }
gamacros-profile = { path = "crates/gamacros-profile" }
gamacros-bit-derive = { path = "crates/gamacros-bit/derive" }
gamacros-bit-mask = { path = "crates/gamacros-bit/mask" }
nsworkspace = "0.2.0"

ctrlc = "3.4.5"
crossbeam-channel = "0.5"
dashmap = "5"
sdl2 = { version = "0.37" }

syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

thiserror = "2.0.12"

enigo = { version = "0.6.0" }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
serde_derive = "1.0.219"

chrono = "0.4.30"
log = "0.4.26"
colored = "3.0.0"
fern = "0.6.1"

objc = "0.2.7"
cocoa = "0.24.1"

[workspace.lints.rust]
unreachable_pub = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(codspeed)",
] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
# Allowed pedantic lints
char_lit_as_u8 = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
implicit_hasher = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
single_match_else = "allow"
too_many_lines = "allow"
needless_raw_string_hashes = "allow"
# Disallowed restriction lints
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
redundant_clone = "warn"
debug_assert_with_mut_call = "warn"
unused_peekable = "warn"
large_stack_arrays = "allow"

[profile.release]
opt-level = "z"        # size-first (use 3 for speed-first)
lto = "fat"            # "thin" if link time hurts
codegen-units = 1
panic = "abort"
strip = true
debug = 0
incremental = false
