[package]
name = "gamacros-control"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
enigo = { workspace = true, features = ["serde", "platform_specific"] }
serde = { workspace = true, features = ["derive"] }
smallvec = "1.13"
