[package]
name = "gamacros-controller"
version = "0.1.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[features]
default = ["sdl2-backend"]
sdl2-backend = []

[dependencies]
thiserror = { workspace = true }
sdl2 = { version = "0.37", features = ["bundled", "static-link"], optional = false }
crossbeam-channel = "0.5"
