[package]
name = "gamacros-gamepad"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[features]
default = ["sdl2-backend"]
sdl2-backend = []

[dependencies]
thiserror = { workspace = true }
sdl2 = { workspace = true }
crossbeam-channel = { workspace = true }
gamacros-bit-derive = { workspace = true }
gamacros-bit-mask = { workspace = true }
ahash = { workspace = true }
