[package]
name = "gamacros-profile"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
gamacros-keypress = { workspace = true }
gamacros-controller = { workspace = true }
gamacros-bit-mask = { workspace = true }
