[package]
name = "gamacros-workspace"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
gamacros-control = { workspace = true }
gamacros-gamepad = { workspace = true }
gamacros-bit-mask = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
ahash = { workspace = true, features = ["serde"] }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
