[package]
name = "gamacrosd"
version = "0.1.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
gamacros-controller = { workspace = true }
gamacros-keypress = { workspace = true }
gamacros-profile = { workspace = true }
gamacros-activity = { workspace = true }
gamacros-bit-mask = { workspace = true }
ctrlc = { workspace = true }
crossbeam-channel = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
