[package]
name = "gamacrosd"
version = "0.1.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
gamacros-gamepad = { workspace = true }
gamacros-control = { workspace = true }
gamacros-workspace = { workspace = true }
gamacros-bit-mask = { workspace = true }
enigo = { workspace = true }
ctrlc = { workspace = true }
crossbeam-channel = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
nsworkspace = { workspace = true }
clap = { workspace = true, features = ["derive"] }
lunchctl = { workspace = true }
log = "0.4.26"
colored = "3.0.0"
fern = "0.6.1"
ahash = "0.8"