[package]
name = "gamacrosd"
version = "0.1.1"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
gamacros-gamepad = { workspace = true }
gamacros-control = { workspace = true }
gamacros-workspace = { workspace = true }
gamacros-bit-mask = { workspace = true }
enigo = { workspace = true }
ctrlc = { workspace = true }
crossbeam-channel = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
lunchctl = { workspace = true }
log = { workspace = true }
colored = { workspace = true }
fern = { workspace = true }
ahash = { workspace = true }
smallvec = { workspace = true }
bitcode = "0.6.7"

[target.'cfg(target_os = "macos")'.dependencies]
nsworkspace = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
codspeed-criterion-compat = { workspace = true }

[[bench]]
name = "buttons"
harness = false

[[bench]]
name = "sticks"
harness = false

[package.metadata.dist]
dist = true
